fixed spacing of navigation

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a:hover {
 nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 2rem;
 }
 
